<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/preferences" android:icon="@drawable/ic_menu_preferences" android:id="@+id/menu_preferences"/>
    <item android:icon="@drawable/ic_menu_refresh" android:id="@+id/menu_update" android:title="@string/update"></item>
    <item android:title="@string/dumpmeasurements" android:id="@+id/menu_dumpmeasurements"></item>   
    <item android:id="@+id/menu_changelist" android:title="@string/change_listtype">
	    <menu>
		    <group android:checkableBehavior="single" android:id="@+id/group_changelist">
		        <item android:id="@+id/menu_usesimple" android:title="@string/simplelist"></item>
		        <item android:id="@+id/menu_usefisheye" android:title="@string/fisheye"></item>
		        <item android:id="@+id/menu_usetree" android:title="@string/treelist"></item>
		    </group>
	    </menu>
    </item>
</menu>
